# flux-server

./: .env.example  .gitignore  APIDOC.md  Cargo.toml  README.md  docker-compose.yml
apps/api-server/: Cargo.toml
apps/api-server/src/: app.rs  main.rs  state.rs
apps/api-server/src/controllers/: channels.rs  health.rs  orgs.rs
apps/api-server/src/models/: auth.rs  mod.rs
apps/api-server/src/repositories/: health_repository.rs  mod.rs
apps/api-server/src/services/: mod.rs  orgs_service.rs
community-app/: .dockerignore  .env.example  Cargo.toml  Dockerfile.api-server  Dockerfile.lorelei-harbor  Dockerfile.realtime-gateway  Dockerfile.web  Dockerfile.web-prod  Dockerfile.worker  Makefile  README.md  README_DEV.md  docker-compose.yml  lorelei.toml
community-app/apps/api-server/: Cargo.toml
community-app/apps/api-server/src/: app.rs  attachments_storage.rs  lib.rs  main.rs  readiness.rs  routes_attachments.rs  routes_audit.rs  routes_auth.rs  routes_branding.rs  routes_channels.rs  routes_dms.rs  routes_experience.rs  routes_friends.rs  routes_lorelei.rs  routes_media.rs  routes_messages.rs  routes_notifications.rs  routes_orgs.rs  routes_threads.rs  state.rs  util.rs
community-app/apps/api-server/tests/: attachments_download_and_validation.rs  branding_patch_semantics.rs  experience_context_resolution.rs  media_join_intents.rs  media_reconnect_and_ghosts.rs  media_session_lifecycle.rs  messaging_threads_pins_search.rs  notification_profiles_crud.rs  notifications_profiles_resolution.rs  org_discovery_join_requests.rs  permissions_isolation.rs  readiness_chaos.rs  tenant_isolation_full.rs
community-app/apps/lorelei-cli/: Cargo.toml
community-app/apps/lorelei-cli/src/: app.rs  cli.rs  harbor_client.rs  main.rs
community-app/apps/lorelei-harbor/: Cargo.toml
community-app/apps/lorelei-harbor/migrations/: 0001_init.sql  0002_autonomy.sql  0003_documents.sql
community-app/apps/lorelei-harbor/src/: app.rs  lib.rs  main.rs  worker.rs
community-app/apps/lorelei-harbor/tests/: http_api.rs  pg_current_store.rs  worker_autonomy.rs
community-app/apps/realtime-gateway/: Cargo.toml
community-app/apps/realtime-gateway/src/: lib.rs  main.rs  protocol.rs  runtime.rs
community-app/apps/realtime-gateway/tests/: media_isolation.rs  tenant_isolation_ws_scoping.rs
community-app/apps/web/: index.html  package-lock.json  package.json  tsconfig.build.json  tsconfig.tsbuildinfo  vite.config.ts
community-app/apps/web/src/: main.tsx  router.tsx  styles.css
community-app/apps/worker/: Cargo.toml
community-app/apps/worker/src/: main.rs
community-app/crates/api/: Cargo.toml
community-app/crates/api/src/: lib.rs
community-app/crates/auth/: Cargo.toml
community-app/crates/auth/src/: lib.rs
community-app/crates/branding/: Cargo.toml
community-app/crates/branding/src/: lib.rs
community-app/crates/chat/: Cargo.toml
community-app/crates/chat/src/: lib.rs
community-app/crates/config/: Cargo.toml
community-app/crates/config/src/: lib.rs
community-app/crates/db/: Cargo.toml
community-app/crates/db/migrations/: 202604270002_auth.sql  202604270003_core_entities.sql  202604270004_initial_schema.sql  202604270005_invites.sql  202604280001_init.sql  202604280002_core_entities.sql  202604280002_required_tables.sql  202604280003_org_invites.sql  202605030001_media_rooms_name.sql  202605030002_notifications.sql  202605060001_branding_theme.sql  202605070001_friends_dms.sql  202605070002_user_profile.sql  202605090001_channel_created_by.sql  202605100001_branding_modes_themes.sql  202605100002_branding_more_tokens.sql  202605180001_media_session_lifecycle.sql  202605180002_media_participants_device_reconnect.sql  202605180003_threads_pins_search.sql  202605180004_attachment_storage_kind.sql  202605180005_experience_mode_resolver.sql  202605180006_brand_presets_and_assets.sql  202605180007_notification_profiles.sql  202605190001_org_discovery_join_requests.sql  202605260001_user_theme_preference.sql  202605290001_channel_video_kind.sql  202605290002_backfill_channel_mode_hints.sql  202606220001_notification_rule_channels.sql  202606220002_user_notification_sound.sql  202606230001_lorelei_schema.sql  202606230002_lorelei_channel_kind_and_bot_users.sql  202606230003_lorelei_integration_tables.sql  202606230004_lorelei_global_user.sql  202606230005_lorelei_backfill_org_membership.sql  202606230006_lorelei_user_scoped_redesign.sql  202606230007_lorelei_mention_redesign.sql
community-app/crates/db/src/: lib.rs
community-app/crates/domain/: Cargo.toml
community-app/crates/domain/src/: api_error.rs  lib.rs
community-app/crates/events/: Cargo.toml
community-app/crates/events/src/: core.rs  envelope.rs  jetstream.rs  lib.rs  media.rs  messaging.rs  subjects.rs
community-app/crates/lorelei-bridge/: Cargo.toml
community-app/crates/lorelei-bridge/src/: client.rs  error.rs  lib.rs  resolve.rs
community-app/crates/lorelei-core/: Cargo.toml
community-app/crates/lorelei-echo/: Cargo.toml
community-app/crates/lorelei-eval/: Cargo.toml
community-app/crates/lorelei-lore/: Cargo.toml
community-app/crates/lorelei-shells/: Cargo.toml
community-app/crates/lorelei-siren/: Cargo.toml
community-app/crates/lorelei-song/: Cargo.toml
community-app/crates/lorelei-tide/: Cargo.toml
community-app/crates/media/: Cargo.toml
community-app/crates/notifications/: Cargo.toml
community-app/crates/orgs/: Cargo.toml
community-app/crates/permissions/: Cargo.toml
community-app/crates/realtime/: Cargo.toml
community-app/crates/secrets/: Cargo.toml
community-app/crates/telemetry/: Cargo.toml
community-app/deploy/flux/: .env.example  docker-compose.yml  flux.nginx.conf  fluxserver.nginx.conf  livekit.yaml
community-app/docs/: alerts.md  design_system.md  known_quirks.md  manual_qa_media_realtime.md  manual_qa_messaging_threads_pins_search.md  observability.md  repo_map.md  tenant_isolation_audit.md
community-app/prompts/: echo_query_rewriter.md  echo_reranker.md  lore_critic.md  lore_extractor.md  siren_policy.md  song_answer.md  song_planner.md
(+171 files in other folders)
