[workspace]
resolver = "2"
members = [
  "apps/api-server",
  "apps/realtime-gateway",
  "apps/worker",

  "crates/auth",
  "crates/branding",
  "crates/chat",
  "crates/config",
  "crates/db",
  "crates/domain",
  "crates/events",
  "crates/media",
  "crates/notifications",
  "crates/orgs",
  "crates/permissions",
  "crates/realtime",
  "crates/telemetry",
]

[workspace.package]
edition = "2021"
license = "UNLICENSED"

[workspace.dependencies]
anyhow = "1"
argon2 = "0.5"
async-nats = "0.38"
axum = { version = "0.8", features = ["ws", "macros", "json"] }
base64 = "0.22"
dotenvy = "0.15"
jsonwebtoken = "9"
rand = "0.8"
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "time",
  "json",
  "migrate"
] }
thiserror = "2"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-full", "timeout", "request-id"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v7"] }
validator = { version = "0.20", features = ["derive"] }
