[workspace]
resolver = "2"
members = [
  "apps/api-server",
  "apps/realtime-gateway",
  "apps/worker",
  "crates/auth",
  "crates/branding",
  "crates/chat",
  "crates/config",
  "crates/db",
  "crates/domain",
  "crates/events",
  "crates/media",
  "crates/notifications",
  "crates/orgs",
  "crates/permissions",
  "crates/realtime",
  "crates/telemetry",
]

[workspace.package]
edition = "2021"
license = "UNLICENSED"
version = "0.1.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws", "macros", "json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-full", "timeout"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

uuid = { version = "1", features = ["v7", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "time",
  "json",
  "migrate"
] }

redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }
async-nats = "0.38"

jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"

thiserror = "2"
anyhow = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

validator = { version = "0.20", features = ["derive"] }

reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

base64 = "0.22"
dotenvy = "0.15"
sha2 = "0.10"
futures-util = "0.3"
