[package]
name = "api-server"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
config = { path = "../../crates/config" }
db = { path = "../../crates/db" }
dotenvy.workspace = true
telemetry = { path = "../../crates/telemetry" }
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
