[package]
name = "api-server"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-nats.workspace = true
axum.workspace = true
base64.workspace = true
config = { path = "../../crates/config" }
db = { path = "../../crates/db" }
dotenvy.workspace = true
domain = { path = "../../crates/domain" }
events = { path = "../../crates/events" }
media = { path = "../../crates/media" }
permissions = { path = "../../crates/permissions" }
rand.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
telemetry = { path = "../../crates/telemetry" }
time.workspace = true
tokio.workspace = true
tower-http.workspace = true
tower.workspace = true
tracing.workspace = true
uuid.workspace = true
validator.workspace = true
auth = { path = "../../crates/auth" }
api = { path = "../../crates/api" }
http-body-util = "0.1"
