[package]
name = "realtime-gateway"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
config = { path = "../../crates/config" }
dotenvy.workspace = true
realtime = { path = "../../crates/realtime" }
telemetry = { path = "../../crates/telemetry" }
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
