[package]
name = "worker"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
config = { path = "../../crates/config" }
db = { path = "../../crates/db" }
dotenvy.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
telemetry = { path = "../../crates/telemetry" }
