[package]
name = "worker"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-nats.workspace = true
config = { path = "../../crates/config" }
db = { path = "../../crates/db" }
dotenvy.workspace = true
events = { path = "../../crates/events" }
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
telemetry = { path = "../../crates/telemetry" }
time.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
futures-util.workspace = true
