[package]
name = "auth"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
base64.workspace = true
jsonwebtoken.workspace = true
rand.workspace = true
serde.workspace = true
sha2.workspace = true
time.workspace = true
uuid.workspace = true
