[package]
name = "lorelei-bridge"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
reqwest.workspace = true
secrets = { path = "../secrets" }
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["macros"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }
