[package]
name = "lorelei-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml = "0.8"
uuid = { workspace = true, features = ["v4"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
proptest = "1"
