[package]
name = "lorelei-lore"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
lorelei-core = { path = "../lorelei-core" }
serde.workspace = true
serde_json.workspace = true
qdrant-client.workspace = true
sha2.workspace = true
sqlx = { workspace = true, features = ["chrono", "macros"] }
tokio.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
lorelei-echo = { path = "../lorelei-echo" }
