[package]
name = "lorelei-shells"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
lorelei-core = { path = "../lorelei-core" }
serde.workspace = true
serde_json.workspace = true
schemars = { version = "0.8", features = ["uuid1", "chrono"] }
sqlx = { workspace = true, features = ["chrono", "macros"] }
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tokio.workspace = true
