[package]
name = "lorelei-siren"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
lorelei-core = { path = "../lorelei-core" }
serde.workspace = true
serde_json.workspace = true
uuid = { workspace = true, features = ["v4"] }
chrono.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
lorelei-tide = { path = "../lorelei-tide" }
