[package]
name = "media"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
config = { path = "../config" }
domain = { path = "../domain" }
events = { path = "../events" }
livekit-api = "0.4.19"
permissions = { path = "../permissions" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
time.workspace = true
uuid.workspace = true
